Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65500

Cannot configure Font property for Imagine style

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.10.1
    • 5.10.0
    • Quick: Controls 2
    • None
    • d26d6a46bb5793e4a3bdc2c7a387f8f8a89b349b

    Description

      Writing Font configuration inside style configure script: qtquickcontrols2.conf is useless on Imagine style. Example configure:

      [Imagine]
      Font\Family=Microsoft YaHei
      Font\PixelSize=13

      Tested on Windows, useless, shows Simsun(default Chinese font).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            jiangcaiyang123 caiyang jiang
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes