Respect user font settings from qtquickcontrols2.conf file

Resolve the style's font against the font that the user set in the
configuration file, rather than only using the style's font.

This patch also removes all of the fonts which were identical and
replaces them with a single font.

Task-number: QTBUG-65500
Change-Id: I284b0d75ac3ad5bf7123bbd13bbfe85d25145483
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>